--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,10 +2,39 @@
 font-family: 'Roboto', sans-serif;*/
 
 h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 72px;
+  color: rgb(255, 255, 255);
+  line-height: 98px;
 }
 
 h2 {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
+}
+
+p {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  line-height: 35px;
+}
+
+img {
+  width: 100%;
+}
+
+.overlay {
+  margin-top: 135px;
+  position: relative;
+  text-align: center;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
