--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,9 @@ h2 {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
   color: var(--primary-color);
+  font-size: 28px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 footer {
@@ -28,6 +31,10 @@ footer {
 footer p {
   font-family: "Roboto", sans-serif;
   color: var(--primary-color);
+}
+
+a {
+  text-decoration: none;
 }
 .overlay-text p {
   font-family: "Nunito", sans-serif;
@@ -47,6 +54,9 @@ footer p {
   text-align: center;
 }
 
+.main img {
+  width: 100%;
+}
 .overlay-text {
   position: absolute;
   top: 50%;
@@ -76,6 +86,12 @@ footer p {
   color: var(--secondary-color);
 }
 
-.main {
-  margin: 100px 140px;
+.wrapper {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
+@media (max-width: 576px) {
+  .main {
+    margin: 20px 50px;
+  }
+} ;
