--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,10 +72,8 @@ a {
   margin-left: 140px;
   margin-right: 140px;
   margin-top: 48px;
-  padding: 0;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 22px;
+
+  font-weight: bold;
 }
 
 .navbar-text-color {
