--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,8 @@ h2 {
 
 footer {
   background-color: rgb(249, 247, 254);
-  padding: 38px 140px;
+  padding-top: 38px;
+  padding-bottom: 38px;
 }
 
 footer p {
@@ -69,10 +70,7 @@ a {
 }
 
 .navbar-margin {
-  margin-left: 140px;
-  margin-right: 140px;
   margin-top: 48px;
-
   font-weight: bold;
 }
 
@@ -88,8 +86,3 @@ a {
   margin-top: 100px;
   margin-bottom: 100px;
 }
-@media (max-width: 576px) {
-  .main {
-    margin: 20px 50px;
-  }
-} ;
