--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ font-family: 'Roboto', sans-serif;*/
   --secondary-color: rgb(102, 46, 237);
 }
 
-h1 {
+.overlay-text h1 {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
   font-size: 72px;
@@ -23,6 +23,23 @@ h2 {
   margin-bottom: 50px;
 }
 
+h3 {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 49px;
+}
+
+p {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: var(--primary-color);
+}
+
 footer {
   background-color: rgb(249, 247, 254);
   padding-top: 38px;
@@ -36,6 +53,28 @@ footer p {
 
 a {
   text-decoration: none;
+}
+
+.title-about {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 98px;
+  color: var(--primary-color);
+}
+
+.name {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 87px;
+  color: var(--primary-color);
+}
+
+.img-girl {
+  width: 460px;
 }
 .overlay-text p {
   font-family: "Nunito", sans-serif;
@@ -94,6 +133,33 @@ a {
   text-align: center;
 }
 
+@media (max-width: 576px) {
+  .footer-icons,
+  .footer-rights {
+    text-align: left;
+  }
+  .wrapper {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+  footer {
+    padding-top: 15px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 992px) {
+  .img-girl {
+    width: 300px;
+  }
+  .name {
+    font-size: 48px;
+    margin-bottom: 0;
+  }
+}
+
+/*media for overlay text*/
 @media (max-width: 1450px) {
   .overlay-text {
     top: 60%;
@@ -101,7 +167,7 @@ a {
   .overlay-text p {
     font-size: 20px;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 66px;
     line-height: 1.2;
   }
@@ -111,7 +177,7 @@ a {
   .overlay-text p {
     font-size: 20px;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 60px;
     line-height: 1.2;
   }
@@ -121,7 +187,7 @@ a {
     font-size: 20px;
     line-height: 1.2;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 55px;
     line-height: 1.2;
   }
@@ -132,7 +198,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 51px;
     line-height: 1.2;
   }
@@ -146,7 +212,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 46px;
     line-height: 1.2;
   }
@@ -161,7 +227,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 40px;
     line-height: 1.2;
   }
@@ -175,7 +241,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 35px;
     line-height: 1.2;
   }
@@ -186,7 +252,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 27px;
     line-height: 1.2;
   }
@@ -200,7 +266,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 22px;
     line-height: 1;
   }
@@ -214,7 +280,7 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 15px;
     line-height: 1;
   }
@@ -228,24 +294,8 @@ a {
     line-height: 1.2;
     font-weight: normal;
   }
-  h1 {
+  .overlay-text h1 {
     font-size: 12px;
     line-height: 1;
-  }
-}
-
-@media (max-width: 576px) {
-  .footer-icons,
-  .footer-rights {
-    text-align: left;
-  }
-  .wrapper {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
-  }
-  footer {
-    padding-top: 15px;
-    padding-bottom: 10px;
   }
 }
