--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,15 +147,22 @@ a {
     padding-top: 15px;
     padding-bottom: 10px;
   }
-}
-
-@media (max-width: 992px) {
-  .img-girl {
-    width: 300px;
+  .title-about {
+    font-size: 50px;
   }
   .name {
-    font-size: 48px;
-    margin-bottom: 0;
+    margin-bottom: 5px;
+    font-size: 35px;
+  }
+  p {
+    margin-bottom: 40px;
+  }
+  .img-girl {
+    width: 250px;
+  }
+  h2 {
+    margin-bottom: 12px;
+    text-align: center;
   }
 }
 
